--- a/README.html
+++ b/README.html
@@ -1,4 +1,3 @@
-#<html><head>Hello! Friend..how are you?</head><body bgcolor="blue"><h1>SANDIP</h1><h2>COMPUTER SCIENCE</h2><h3>ARTIFICIAL INTELLEGENCE</h3>CODING DECODING<br>
-MATHEMATICS AND COMPUTING ENGINEERING (IISC BANGALORE)<br>
-QUANTUM COMPUTING</br></br></body></html>
+# C PROGRAMMING 
+CODING-DECODING
 
